# searchClient

./: Makefile  Makefile.am  Makefile.in  README.md  main.cc  util.cc  util.h
glue/: gatt_proxy-glue.h  sd_proxy-glue.h
xml/: bccmd.xml  cm.xml  gatt.h  gatt.xml  hdp.xml  hfg.xml  opps.xml  rfcommp.xml  sc.xml  sd.xml
